--- a/Git_test.ipynb
+++ b/Git_test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0627a449",
+   "id": "53d7347e",
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "1d9a049d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiplication\n",
+    "d = a*b\n",
+    "print(d)\n",
+    "dd = a**2\n",
+    "print(dd)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "557f9439",
+   "id": "0f884a39",
    "metadata": {},
    "outputs": [],
    "source": []
