Python Loops-Function

--- a/Git_test.ipynb
+++ b/Git_test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "de0ccf8b",
+   "execution_count": 145,
+   "id": "1a8dc7f4",
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e240d847",
+   "execution_count": 146,
+   "id": "0ee6279c",
    "metadata": {},
    "outputs": [
     {
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b97cf773",
+   "execution_count": 147,
+   "id": "6adf271b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "d48699e4",
+   "execution_count": 148,
+   "id": "d279ebd3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7 ms ± 124 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "1.51 ms ± 41.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "de46ccd5",
+   "execution_count": 149,
+   "id": "56ddda20",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b81c07e6",
+   "execution_count": 150,
+   "id": "c42b2214",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "'Hello Work'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2357f754",
+   "execution_count": 151,
+   "id": "48682653",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "'l'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c59c4923",
+   "execution_count": 152,
+   "id": "1a2173ee",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "39929f55",
+   "execution_count": 153,
+   "id": "e1be03c1",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "cb398453",
+   "execution_count": 154,
+   "id": "a0677817",
    "metadata": {},
    "outputs": [
     {
@@ -207,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "f4c7746b",
+   "execution_count": 155,
+   "id": "d5d28707",
    "metadata": {},
    "outputs": [
     {
@@ -233,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "755b72d0",
+   "execution_count": 156,
+   "id": "0ff4f3eb",
    "metadata": {},
    "outputs": [
     {
@@ -256,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "3e803122",
+   "execution_count": 157,
+   "id": "23f3fca2",
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "918910fa",
+   "execution_count": 158,
+   "id": "abd58442",
    "metadata": {},
    "outputs": [
     {
@@ -304,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "1247c69e",
+   "execution_count": 159,
+   "id": "46e5fa19",
    "metadata": {},
    "outputs": [
     {
@@ -323,8 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "97f5b2ee",
+   "execution_count": 160,
+   "id": "e2425b4a",
    "metadata": {},
    "outputs": [
     {
@@ -343,8 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "cdfa7d7f",
+   "execution_count": 161,
+   "id": "218d778d",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "[2, 3, 4]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,8 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "135b3403",
+   "execution_count": 162,
+   "id": "62da88d0",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "[1, 2, 3, 4]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,8 +388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "51b5f270",
+   "execution_count": 163,
+   "id": "b49aa845",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "[2, 3, 4, 5]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,8 +409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "f331ef6d",
+   "execution_count": 164,
+   "id": "facecdd3",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "[2, 4]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "3b8013d8",
+   "execution_count": 165,
+   "id": "34bc115d",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "[5, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,8 +452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "f0fa34e8",
+   "execution_count": 166,
+   "id": "3bfc5183",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "5"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,8 +473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "c4344e6e",
+   "execution_count": 167,
+   "id": "29e2ff2a",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "[1, 2, 3, 8, 's']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "5ea8e027",
+   "execution_count": 168,
+   "id": "5c34ab4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,8 +508,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "72172f7b",
+   "execution_count": 169,
+   "id": "8be58c7f",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "True"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,8 +529,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "96be8e3f",
+   "execution_count": 170,
+   "id": "30c364a5",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "True"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,8 +550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "e756fd9f",
+   "execution_count": 171,
+   "id": "dd4343d2",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,8 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "cdc9d930",
+   "execution_count": 172,
+   "id": "d43ff31f",
    "metadata": {},
    "outputs": [
     {
@@ -591,8 +591,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "e2837eea",
+   "execution_count": 173,
+   "id": "5cc6c9f9",
    "metadata": {},
    "outputs": [
     {
@@ -611,8 +611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "32d61bb5",
+   "execution_count": 174,
+   "id": "96c9cf01",
    "metadata": {},
    "outputs": [
     {
@@ -635,8 +635,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "44ba7cfb",
+   "execution_count": 175,
+   "id": "196a0e80",
    "metadata": {},
    "outputs": [
     {
@@ -659,8 +659,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "e128e139",
+   "execution_count": 176,
+   "id": "1cd17ded",
    "metadata": {},
    "outputs": [
     {
@@ -683,8 +683,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "6dc19c52",
+   "execution_count": 177,
+   "id": "37b06c33",
    "metadata": {},
    "outputs": [
     {
@@ -707,8 +707,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "7a0f96cf",
+   "execution_count": 178,
+   "id": "7beae184",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "11"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,8 +732,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "0a9d6f2b",
+   "execution_count": 179,
+   "id": "33f2bcd0",
    "metadata": {},
    "outputs": [
     {
@@ -751,8 +751,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "4a04026f",
+   "execution_count": 180,
+   "id": "87dd9e99",
    "metadata": {},
    "outputs": [
     {
@@ -771,8 +771,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "09367252",
+   "execution_count": 181,
+   "id": "9ee014dc",
    "metadata": {},
    "outputs": [
     {
@@ -793,8 +793,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "206e4dd6",
+   "execution_count": 182,
+   "id": "09999ea3",
    "metadata": {},
    "outputs": [
     {
@@ -825,8 +825,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "c63559eb",
+   "execution_count": 183,
+   "id": "aa7fed0a",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
     }
    ],
    "source": [
-    "#tuple is ordered, but \"unchangeable\" or \"immutable\"\n",
+    "#tuple is ordered, but \"unchangeable\" or \"immutable\", duplicate\n",
     "thetup1 = ('apple','mango', 'bank') \n",
     "print(thelist1)\n",
     "thetup2 = ('apple',5, 'bank', True)\n",
@@ -856,8 +856,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "7a5838fc",
+   "execution_count": 184,
+   "id": "1e68ed25",
    "metadata": {},
    "outputs": [
     {
@@ -881,8 +881,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "9409cf30",
+   "execution_count": 185,
+   "id": "2fb45efe",
    "metadata": {},
    "outputs": [
     {
@@ -911,8 +911,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "df59de8d",
+   "execution_count": 190,
+   "id": "01daf131",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,8 @@
       "{'name': 'Ajmal', 'grade': 'B'}\n",
       "{'name': ['Ahad', 'Ajmal'], 'grade': ['A', 'B']}\n",
       "['A', 'B']\n",
-      "['Ahad', 'Ajmal', 'Saif']\n"
+      "['Ahad', 'Ajmal', 'Saif']\n",
+      "None\n"
      ]
     }
    ],
@@ -930,21 +931,36 @@
     "#dictionary is ordered, changeable, but does not allow duplication\n",
     "#are used to store data with tags -> key:value, \n",
     "dict1 = {'name':'Ahad', 'grade':'A', 'name':'Ajmal', 'grade':'B'}\n",
-    "print(dict1)\n",
+    "print(dict1) #cannot duplicate\n",
     "dict2 = {'name':['Ahad','Ajmal'] , 'grade':['A','B']}\n",
     "print(dict2)\n",
     "print(dict2['grade'])\n",
     "dict2['name'].append('Saif') #appending data\n",
-    "print(dict2['name'])"
+    "print(dict2['name'])\n",
+    "#print(dict2['number']) #will give an error, use get method (or function), see the next line\n",
+    "print(dict2.get('number'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25aa9130",
+   "execution_count": 194,
+   "id": "56e430a2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Awais', 'grade': 'B', 'percentage': 58}\n",
+      "Ajmal\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1.update({'name':'Awais', 'grade':'B','percentage':58})\n",
+    "print(dict1)\n",
+    "print(dict2['name'][1]) #accessing a particular entry\n"
+   ]
   }
  ],
  "metadata": {
